--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,26 @@ html,
 body {
 	font-family: Nunito;
 }
+
+.title {
+	text-align: center;
+	margin-top: 1.5em;
+}
+
+.inputDiv {
+	padding: 2px 0px;
+}
+
+.actions {
+	width: inherit;
+}
+
+.actions>input {
+	margin: 3px 0px;
+}
+
+@media only screen and (max-width: 564px) {
+	.actions {
+		margin: 0 auto;
+	}
+}
