--- a/styles.css
+++ b/styles.css
@@ -56,3 +56,9 @@ button {
 	padding: 2px 10px;
 	color: white;
 }
+
+input[type="text"] {
+	border-radius: 5px;
+	border: 1px solid #2F4F4FB0;
+	padding: 2px 5px;
+}
