--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,16 @@ body {
 	font-family: Nunito;
 }
 
+.container {
+	margin-bottom: 5em;
+	margin-top: 2em;
+	width: min(500px, 90%);
+}
+
 .title {
 	text-align: center;
-	margin-top: 1.5em;
+	margin-top: 0.1em;
+	margin-bottom: 1rem !important;
 }
 
 .inputDiv {
@@ -61,4 +68,8 @@ input[type="text"] {
 	border-radius: 5px;
 	border: 1px solid #2F4F4FB0;
 	padding: 2px 5px;
+}
+
+nav {
+	font-size: larger;
 }
